Imagen mas pequeña

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
     <main>
         <div class="terminator-card" id="t800-card">
             <h2>Terminator T-800</h2>
-            <img src="img/T800.jpg" alt="Imagen del Terminator T-800" class="terminator-img">
+            <img src="img/T800.png" alt="Imagen del Terminator T-800" class="terminator-img">
             <p>El modelo más icónico, un endoesqueleto de combate infiltrador. Famoso por su resistencia y determinación implacable.</p>
         </div>
     </main>
