Base para terminar CRUD

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelos de Terminators</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-    <header>
-        <h1>Modelos de Terminators</h1>
-    </header>
-
-    <main>
-        <div class="terminator-card" id="t800-card">
-            <h2>Terminator T-800</h2>
-            <img src="img/T800.png" alt="Imagen del Terminator T-800" class="terminator-img">
-            <p>El modelo más icónico, un endoesqueleto de combate infiltrador. Famoso por su resistencia y determinación implacable.</p>
-        </div>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Skynet - Todos los derechos reservados.</p>
-    </footer>
-
-    <script src="js/logic.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Página Principal</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <header>
+            <h1>Bienvenido a la Base de Datos de Terminators</h1>
+        </header>
+        <main>
+            <div class="card">
+                <p>Selecciona una opción para gestionar la base de datos de Skynet.</p>
+                <a href="pages/terminator-form.html" class="button">Crear Nuevo Terminator</a>
+                <a href="/terminators" class="button">Ver Todos los Terminators</a>
+            </div>
+        </main>
+        <footer>
+            <p>&copy; 2025 Skynet - CRUD JSP</p>
+        </footer>
+    </body>
 </html>
