--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,8 +13,8 @@
         <main>
             <div class="card">
                 <p>Selecciona una opción para gestionar la base de datos de Skynet.</p>
-                <a href="pages/terminator-form.html" class="button">Crear Nuevo Terminator</a>
-                <a href="/terminators" class="button">Ver Todos los Terminators</a>
+                <a href="terminators/crear" class="button">Crear Nuevo Terminator</a>
+                <a href="terminators" class="button">Ver Todos los Terminators</a>
             </div>
         </main>
         <footer>
